complete desktop version

--- a/index.html
+++ b/index.html
@@ -13,16 +13,81 @@
 <body>
     <div class="container">
        <div class="flexbox-container">
-        <div class="flex1 flex-item"><p>Create and schedule content quicker.</p></div>
-        <div class="flex2 flex-item"></div>
+        <div class="flex1 ">
+            <div class="flex1-item1">
+                <p>Create and schedule content <span class="quicker">quicker.</span></p>
+            </div>
+            <div class="flex1-item2">
+                <img src="./assets/images/createpost.webp" alt="create-post">
+            </div>
+        </div>
+        <div class="flex2 ">
+            <div class="flex2-item1">
+                <p>Write your content<br> using AI.</p>
+            </div>
+            <div class="flex2-item2">
+                <img src="./assets/images/ai-content.webp" alt="AI content ">
+            </div>
+        </div>
        </div>
        <div class="gridbox-container">
-        <div class="grid-item grid1"></div>
-        <div class="grid-item grid2"></div>
-        <div class="grid-item grid3"></div>
-        <div class="grid-item grid4"></div>
-        <div class="grid-item grid5"></div>
-        <div class="grid-item grid6"></div>
+        <div class="grid-item grid1">
+            <div class="socialmd">
+                <p>Social Media <span class="ten">10x</span><br> Faster with AI</p>
+            </div>
+            <div class="fivestars">
+                <img src="./assets/images/five-stars.webp" alt="">
+            </div>
+            <div class="reviews">
+                <p>Over 4,000 5-star reviews</p>
+            </div>
+            
+       </div>
+
+        <div class="grid-item grid2">
+            <div class="schedule-social">
+                <p>Schedule to social media.</p>
+            </div>
+            <div class="bestTime">
+                <img src="./assets/images/bestTime.webp" alt="best time to post image">
+            </div>
+            <div class="optimize">
+                <p>Optimize post timings to publish content at the perfect time for your audience.</p>
+            </div>
+        </div>
+        <div class="grid-item grid3">
+            <div class="multiple-platforms">
+                <img src="./assets/images/multiple-platforms.webp" alt="illustration of multiple platforms">
+            </div>
+            <div class="multiple-accounts">
+                <p>Manage <br>multiple<br> accounts and platforms.</p>
+            </div>
+        </div>
+        <div class="grid-item grid4">
+            <div class="maintain">
+                <p>Maintain a consistent <br> posting schedule.</p>
+            </div>
+            <div class="schedule">
+                <img src="./assets/images/illustration-consistent-schedule.webp" alt="illustrationof consistent schedule">
+            </div>
+        </div>
+        <div class="grid-item grid5">
+            <div class="faster">
+                <h1>>56%</h1>
+                <p>faster audience growth</p>
+            </div>
+            <div class="audience">
+                <img src="./assets/images/illustration-audience-growth.webp" alt="illustration of audience growth">
+            </div>
+        </div>
+        <div class="grid-item grid6">
+            <div class="followers">
+                <img src="./assets/images/illustration-grow-followers.webp" alt="illustration of grow followers">
+            </div>
+            <div class="non-stop">
+                <p>Grow followers with non-stop content.</p>
+            </div>
+        </div>
         
        </div>
     </div>
